fix: очередная попытка починить visibilit

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -14,5 +14,5 @@
     top: 0;
     opacity: 0;
     visibility: hidden;
-    transition: visibility 0s, opacity 0.5s linear;
+    transition: visibility 0.3s, opacity 0.4s linear;
 }
